# whisper-writer-2

./: justfile  pyproject.toml  run.py
src/: 20231118_main_rec.py  20231118_main_tk_small.py  config.json  main.py  main2.py  main_client.py  main_faster_whisper.py  main_hotkey.py  main_keyboard.py  main_pynput.py  main_sum.py  main_z.py  status_window.py  transcription.py
